# ros2_yolov8

./: README.md
ros2_v8/: README.md  environment.yaml  requestment.txt  rgb_camera_calib_1.npz  run_detector.sh  save.sh  vision_ros2jazzy_environment.yml  yolov8_10.yaml
ros2_v8/install/: local_setup.sh  setup.sh
ros2_v8/install/ros2_yolo_msgs/share/ros2_yolo_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_v8/install/ros2_yolo_msgs/share/ros2_yolo_msgs/cmake/: ament_cmake_export_libraries-extras.cmake  export_ros2_yolo_msgs__rosidl_generator_cExport-noconfig.cmake  export_ros2_yolo_msgs__rosidl_generator_cExport.cmake  export_ros2_yolo_msgs__rosidl_generator_pyExport-noconfig.cmake  export_ros2_yolo_msgs__rosidl_generator_pyExport.cmake  export_ros2_yolo_msgs__rosidl_typesupport_fastrtps_cExport.cmake  ros2_yolo_msgsConfig.cmake  (+6 more)
ros2_v8/install/ros_yolo/lib/ros_yolo/: capturer  detector  detector1  detector_text  nub  pub  record  save  std  text_pub
ros2_v8/install/ros_yolo/share/ros_yolo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_v8/log/: latest_build
ros2_v8/src/ros-yolov8/: README.md  package.xml  setup.cfg  setup.py
ros2_v8/src/ros-yolov8/docs/en/: README.md
ros2_v8/src/ros-yolov8/ros_yolo/: camera_capture_function.py  detect.py  detect_text.py  pub_id.py  save.py  servo_controller.py  target_detect_function.py  test.py  test_servo_node.py  text_pub.py  text_pub_msg.py
ros2_v8/src/ros2_yolo_msgs/: CMakeLists.txt  package.xml
ros2_v8/src/ros2_yolo_msgs/msg/: DetectedBox.msg
(+14 files in other folders)
