<?xml version="1.0"?>
<package format="3">
  <name>ros2_yolo_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for YOLOv8-based ROS 2 projects.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
